# LinuxTools

./: SortMyPhotos.py  command1.sh  command2.sh  command3.sh  command4.sh  copyfile.py  deletefile.py  makedir.py  modify.py  root.sh  test.sh
hd2u-1.0.0/: AUTHORS  CREDITS  ChangeLog  INSTALL  Makefile  Makefile.in  NEWS  README  TODO  command.sh  config.h  config.h.in  config.status  configure  configure.in  dos2unix  dos2unix.c  test.sh
hd2u-1.0.0/packaging/: hd2u.spec
tree-1.7.0/: tree
